--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "theme": "tvpage",
     "disablePathToLower": true,
     "enableRobotsTXT": true,
-    "galleryChannelIds": "117404170",
+    "galleryChannelIds": "117404170,117404169",
     "params": {
         "loginId": "1758991",
         "firstpartycookies": true,
